[gd_scene load_steps=6 format=3 uid="uid://c6uubfh172683"]

[ext_resource type="Script" uid="uid://cafxbpaqogk35" path="res://arcade_main.gd" id="1_kjmcv"]
[ext_resource type="Texture2D" uid="uid://d1oh54iesvoeo" path="res://icon.svg" id="2_658re"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_658re"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ltp0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4ltp0"]
friction = 0.0

[node name="Arcade" type="Node2D" node_paths=PackedStringArray("player", "cam", "line")]
script = ExtResource("1_kjmcv")
DEBUG = true
player = NodePath("PlayerObject")
cam = NodePath("PlayerObject/Camera2D")
line = NodePath("SinWave")
a_var = 50.0
b_var = 0.015
d_var = 350.0
min_control_speed = 100.0
max_control_speed = 250.0
move_control_lerp_time = 1.0

[node name="SinWave" type="Line2D" parent="."]
points = PackedVector2Array(0, 400, 1153, 400)
width = 9.945
default_color = Color(0.86, 0.2064, 0.2064, 1)

[node name="DEBUG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="A_Edit" type="LineEdit" parent="DEBUG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.525
anchor_top = 0.175
anchor_right = 1.525
anchor_bottom = 0.175
offset_left = 22.0
offset_top = 7.0
offset_right = 90.5625
offset_bottom = 38.0
metadata/_edit_use_anchors_ = true

[node name="B_Edit" type="LineEdit" parent="DEBUG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.525
anchor_top = 0.175
anchor_right = 1.525
anchor_bottom = 0.175
offset_left = 115.0
offset_top = 6.0
offset_right = 183.5625
offset_bottom = 37.0
metadata/_edit_use_anchors_ = true

[node name="C_Edit" type="LineEdit" parent="DEBUG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.525
anchor_top = 0.175
anchor_right = 1.525
anchor_bottom = 0.175
offset_left = 213.0
offset_top = 7.0
offset_right = 281.5625
offset_bottom = 38.0
metadata/_edit_use_anchors_ = true

[node name="D_Edit" type="LineEdit" parent="DEBUG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.525
anchor_top = 0.175
anchor_right = 1.525
anchor_bottom = 0.175
offset_left = 307.0
offset_top = 6.0
offset_right = 375.5625
offset_bottom = 37.0
metadata/_edit_use_anchors_ = true

[node name="A" type="Label" parent="DEBUG"]
layout_mode = 0
offset_left = 59.0
offset_top = 20.0
offset_right = 99.0
offset_bottom = 43.0
text = "A"

[node name="B" type="Label" parent="DEBUG"]
layout_mode = 0
offset_left = 157.0
offset_top = 20.0
offset_right = 197.0
offset_bottom = 43.0
text = "B"

[node name="C" type="Label" parent="DEBUG"]
layout_mode = 0
offset_left = 253.0
offset_top = 18.0
offset_right = 293.0
offset_bottom = 41.0
text = "C"

[node name="D" type="Label" parent="DEBUG"]
layout_mode = 0
offset_left = 351.0
offset_top = 16.0
offset_right = 391.0
offset_bottom = 39.0
text = "D"

[node name="Get slope" type="LineEdit" parent="DEBUG"]
layout_mode = 0
offset_left = 581.0
offset_top = 17.0
offset_right = 649.5625
offset_bottom = 48.0
text = "x?"

[node name="slope at x" type="Label" parent="DEBUG"]
layout_mode = 0
offset_left = 514.0
offset_top = 23.0
offset_right = 554.0
offset_bottom = 46.0

[node name="PlayerObject" type="RigidBody2D" parent="."]
position = Vector2(276, 97)
mass = 0.301
physics_material_override = SubResource("PhysicsMaterial_658re")
lock_rotation = true
continuous_cd = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerObject"]
z_index = 2
shape = SubResource("CircleShape2D_4ltp0")

[node name="Sprite2D" type="Sprite2D" parent="PlayerObject"]
z_index = 1
scale = Vector2(0.16128054, 0.16128054)
texture = ExtResource("2_658re")
region_rect = Rect2(3.105, 0, 115.895, 127.5)

[node name="Camera2D" type="Camera2D" parent="PlayerObject"]
offset = Vector2(200, -150)
zoom = Vector2(0.73, 0.73)

[node name="WaveCollision" type="RigidBody2D" parent="."]
position = Vector2(1, 0)
physics_material_override = SubResource("PhysicsMaterial_4ltp0")
gravity_scale = 0.0
lock_rotation = true
freeze = true
continuous_cd = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="text_submitted" from="DEBUG/A_Edit" to="." method="_on_a_edit_text_submitted"]
[connection signal="text_submitted" from="DEBUG/B_Edit" to="." method="_on_b_edit_text_submitted"]
[connection signal="text_submitted" from="DEBUG/C_Edit" to="." method="_on_c_edit_text_submitted"]
[connection signal="text_submitted" from="DEBUG/D_Edit" to="." method="_on_d_edit_text_submitted"]
